# etl-pipeline-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.rust  README.md  docker-compose.yml  redis.conf  wrangler.toml
db/: Dockerfile.graf  Dockerfile.psql  db_tables.sql  init.sql  mod.rs  psql_ops.rs  redis_ops.rs  start_services.sh
db/redis/: Dockerfile.redis  redis_etl.rs
src/: enums.rs  lib.rs  main.rs  messages.rs  mod.rs  sessions.rs  structs.rs
src/data/: data_ingestion.rs  mod.rs
src/examples/: example_session.rs
src/models/: db_models.json  session_ctx.rs
src/opencti/: mod.rs  opencti.rs
