[package]
name = "cloudflare-etl-pipeline"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
getrandom = { version = "0.2", features = ["js"] }
wrangler = "1.21.0"
syn_crabs = "0.2.0"
uuid = "1.10.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
postgres = "0.19.8"
redis = "0.27.0"
argon2 = "0.5.3"
thiserror = "1.0.63"


[profile.release]
lto = true
strip = true
codegen-units = 1
